--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ YANDEX_MUSIC_USERNAME=user@yandex.ru
 YANDEX_MUSIC_PASSWORD=password
 YANDEX_MUSIC_EXPORT_DIR=~/
 YANDEX_MUSIC_EXPORT_FILENAME='{timestamp}-yandex-music'
+
+VK_ACCESS_TOKEN=
+VK_EXPORT_DIR=~/
+VK_EXPORT_FILENAME='{timestamp}-vk'
