--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "yandex-music-api": "^0.0.3"
   },
   "devDependencies": {
-    "dotenv": "^6.2.0",
-    "eslint": "^5.16.0"
+    "dotenv": "^8.0.0",
+    "eslint": "^6.0.1"
+  },
+  "resolutions": {
+    "lodash": "^4.17.13"
   }
 }
